# lotus-gpu-miner

./: LICENSE  README.md
.github/workflows/: build.yml  ci.yml
doc/stratum-impl/: 01-requirements-and-compat.md  02-protocol-client-phases.md  03-runtime-logging-and-observability.md  04-testing-validation-rollout.md  README.md
kernels/: lotus_macos.metal  lotus_og.cl
lotus-miner-cli/: Cargo.toml
lotus-miner-cli/src/: main.rs
lotus-miner-gui/: Cargo.toml
lotus-miner-gui/src/: app.rs
lotus-miner-lib/: Cargo.toml
lotus-miner-lib/src/: cli.yaml  lib.rs  miner.rs  settings.rs
lotus-miner-lib/src/miner/: metal_backend.rs  opencl_backend.rs
