[package]
name = "lotus-miner-cli"
version = "0.4.0"
authors = ["Tobias Ruck <ruck.tobias@gmail.com>", "The Lotusia Stewardship <stewardship@lotusia.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lotus-miner-lib = { path = "../lotus-miner-lib" }

tokio = { version = "1.5.0", features = ["full"] }
